# state-machine

./: .gitignore  .gitmodules  CMakeLists.txt  design.drawio
src/: constants.h  old_state.cc  state_machine.h  state_machine.md  states.cc  states.h  transitions.h  transmitters.cc  transmitters.h  types.h
test/: states_test.cc  transitions_test.cc  transmitters_test.cc
